# Gomoku

./: .gitignore  Cargo.toml  Makefile  README.md
lib/: gui.rs  lib.rs
lib/gui/: buttons.rs  color.rs  containers.rs  window.rs
src/: controllers.rs  eval.rs  event_loop.rs  gameboard.rs  gameboard_controller.rs  gameboard_view.rs  macros.rs  main.rs  minmax_alphabeta.rs  models.rs  tmp.rs  traits.rs  views.rs  widgets.rs
src/controllers/: game.rs  game_builder.rs  gameboard.rs  gameplay.rs  homepage.rs  resolver.rs  resolver_builder.rs  window.rs
src/macros/: gameboard.rs
src/models/: game.rs  game_builder.rs  game_info.rs  gameboard.rs  gameboard_tmp.rs  homepage.rs  human.rs  ia.rs  ia_tmp.rs  resolver.rs  resolver_builder.rs  window.rs
src/tests/: bench.rs
src/traits/: player.rs  view_controller.rs  view_model.rs
src/utils/: event_loop.rs
src/views/: game.rs  game_builder.rs  gameboard.rs  homepage.rs  resolver.rs  resolver_builder.rs  widget_gameboard.rs  window.rs
src/widgets/: gameboard.rs
tests/: tests.rs
