[package]
name = "gomoku"
version = "0.1.0"
authors = ["pacifistes <bbrunell@student.42.fr>"]
edition = "2018"

[dependencies]
piston = "0.42.0"
piston2d-graphics = "0.30.0"
piston_window = "0.89.0"
find_folder = "0.3.0"
piston2d-opengl_graphics = "0.59.0"
conrod = { version = "0.61.1", features = ["glium", "winit"] }


[lib]
name = "gomoku"
path = "lib/lib.rs"

[[bin]]
name = "gomoku"
path = "src/main.rs"
