[package]
name = "gomoku"
version = "0.1.0"
authors = ["pacifistes <bbrunell@student.42.fr>"]
edition = "2018"

[dependencies]
strum = "0.13.0"
strum_macros = "0.13.0"
image = "0.21"
piston_window = "0.89.0"
find_folder = "0.3.0"
piston2d-opengl_graphics = "0.59.0"
conrod = { version = "0.61.1", features = ["glium", "winit"] }
conrod_derive = "0.63.0"

[[bin]]
name = "gomoku"
path = "src/main.rs"
